--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,8 @@ dependencies:
   dio: ^5.3.2
   flutter_bloc: ^8.1.3
   bloc: ^8.1.2
-  conditional_builder_null_safety: ^0.0.6
+  dartz: ^0.10.1
+
 
 dev_dependencies:
   flutter_test:
